# claude-code-data-eng-kit

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude/agents/: cost-watchdog.md  eval-runner.md  pipeline-reviewer.md
.claude/commands/: ship-checklist.md
.claude/hooks/: post-edit-pyspark-checks.sh  pre-tool-protect-prod.sh  session-start-context.sh
.claude/rules/: medallion.md  pyspark.md
.claude/skills/dq-check/: SKILL.md
.claude/skills/new-bronze-ingest/: SKILL.md
.claude/skills/promote-to-silver/: SKILL.md
.claude/skills/prompt-eval/: SKILL.md
examples/: bronze_ingest_example.py  gold_kpi_example.py  silver_transform_example.py
mcp-servers/databricks_mini/: README.md  pyproject.toml  server.py
