[project]
name = "databricks-mini"
version = "0.1.0"
description = "Read-only MCP server exposing Databricks job and Unity Catalog state."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
databricks-mini = "server:mcp.run"
